# ffi_test

./: .gitignore  Cargo.toml
include/: module.modulemap  rustlib.h
kotlinFFI/: CMakeLists.txt  native-lib.c
src/: ffi_test_error.rs  lib.rs  sqlite_logic.rs
